v5.0

  * added an optional term-equivalence predicate to the test--> and
    test-->> forms

  * added R6RS and Racket VM models to examples sub-collection

  * fixed minor bugs
  
v4.2.5

  * reversed the order in which `where' and `side-condition' clauses
    appear in typeset definitions

  * added support for `where' and `side-condition' clauses that do not
    appear in the metafunction's typeset definition

  * added a #:print? flag to redex-check, to control whether it prints
    or returns its result

  * renamed the #:attempts keyword to #:attempt-num in the `generate-term' form

  * changed typesetting to render `where' clauses as `fresh' clauses
    when the right-hand side is a call to `variable-not-in' or 
    `variables-not-in'

  * changed typesetting of meta-variables to render anything following
    a caret (^) as a superscript

  * minor bug fixes

v4.2.4

  * minor bug fixes

v4.2.3

  * added support for collecting metafunction coverage, using the
    'relation-coverage' parameter. This includes a backwards
    incompatible change: the parameter's value is now a list of
    coverage structures, to allow coverage collection for multiple 
    metafunctions and reduction relations at once.

  * redex/reduction-semantics exports the names `hole' and `in-hole'
    (and `term' no longer captures those names).

  * minor bug fixes

v4.2.2

  * minor bug fixes

v4.2.1

  * improved 'where' conditions in metafunctions and
    reduction-relations so that they work with Redex's full pattern
    language. 

    This is a backwards incompatible change. In old versions,
    variables used in a where clause were independent of the pattern
    language. Now, if the variable in a where clause is a literal in
    the grammar, the result of the where clause must be that
    literal. Similarly, if the variable is a non-terminal, the result
    must match that non-terminal.

  * added 'define-relation' 
