@@ -1,3 +1,9 @@
+  * changed the matching of `where' clauses in a
+    backwards-incompatible way. Previously, pattern variables bound by
+    a `where' left-hand side shadowed bindings from earlier clause's
+    and the case's left-hand side; now, `where' clauses match only
+    when their bindings match the existing ones. 
+
 v5.0
 
   * added an optional term-equivalence predicate to the test--> and
